Sección 2 terminada- fundamentos

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <h1>Curso de JavaScript</h1>
-
+    <a href="https://facebook.com"></a>
+    <a href="hhtps://youtube.com"></a>
+    <a href="https://google.com"></a>
+    <a href="https://instagram.com"></a>
+    <a href="https://twitter.com"></a>
     <div id="app"></div>
-    <script src="Estructuras de control/ForEach - Map/ForEach-Map.js"></script>
+    <script src="Scope/Scope.js"></script>
   </body>
 </html>
