Prueba de contador en el carrito de compras

--- a/Sección 2 Fundamentos JavaScript/index.html
+++ b/Sección 2 Fundamentos JavaScript/index.html
@@ -14,6 +14,6 @@
     <a href="https://instagram.com"></a>
     <a href="https://twitter.com"></a>
     <div id="app"></div>
-    <script src="Scope/Scope.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
