--- a/Pruebas/index-test.html
+++ b/Pruebas/index-test.html
@@ -33,7 +33,7 @@
         <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
         <a
           href="#"
-          class="u-full-width button-primary button input agregar-carrito"
+          class="u-full-width button-primary button input agregar-carritoC1"
           data-id="1"
           >Agregar Al Carrito</a
         >
@@ -46,7 +46,7 @@
         <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
         <a
           href="#"
-          class="u-full-width button-primary button input agregar-carrito"
+          class="u-full-width button-primary button input agregar-carritoC2"
           data-id="2"
           >Agregar Al Carrito</a
         >
@@ -59,13 +59,13 @@
         <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
         <a
           href="#"
-          class="u-full-width button-primary button input agregar-carrito"
+          class="u-full-width button-primary button input agregar-carritoC3"
           data-id="3"
           >Agregar Al Carrito</a
         >
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app-test.js"></script>
   </body>
 </html>
