--- a/Pruebas/index-test2.html
+++ b/Pruebas/index-test2.html
@@ -27,45 +27,47 @@
     </div>
 
     <div class="card">
-      <div class="info-card">
+      <div class="info-cardC1">
         <h4>Curso 1</h4>
         <p>Juan Pedro</p>
         <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
-        <a
+        <button
+          id="boton"
           href="#"
-          class="u-full-width button-primary button input agregar-carrito"
+          class="u-full-width button-primary button input agregar-carritoC1"
           data-id="1"
-          >Agregar Al Carrito</a
         >
+          Agregar Al Carrito
+        </button>
       </div>
     </div>
     <div class="card">
-      <div class="info-card">
+      <div class="info-cardC2">
         <h4>Curso 2</h4>
         <p>Juan Pedro</p>
         <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
         <a
           href="#"
-          class="u-full-width button-primary button input agregar-carrito"
+          class="u-full-width button-primary button input agregar-carritoC2"
           data-id="2"
           >Agregar Al Carrito</a
         >
       </div>
     </div>
     <div class="card">
-      <div class="info-card">
+      <div class="info-cardC3">
         <h4>Curso 3</h4>
         <p>Juan Pedro</p>
         <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
         <a
           href="#"
-          class="u-full-width button-primary button input agregar-carrito"
+          class="u-full-width button-primary button input agregar-carritoC3"
           data-id="3"
           >Agregar Al Carrito</a
         >
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app-test2.js"></script>
   </body>
 </html>
