--- a/WebPack2/src/info.html
+++ b/WebPack2/src/info.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>WebPack</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <h1></h1>
-    <script src="../dist/main.js"></script>
+    <a href="index.html">Ir a clientes</a>
+    <h1>Información</h1>
   </body>
 </html>
